# Robot_kinematic

./: CMakeLists.txt
src/: main.cpp  robot.cpp  robot.h
